# wors_tracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  blended_pattern.cc  blended_pattern.hh  blended_pattern_operations.cc  blended_pattern_operations.hh  camera.cc  camera.hh  camera_test.cc  canvas.cc  canvas.hh  canvas_test.cc  checker2d_pattern.cc  checker2d_pattern.hh  checker2d_pattern_operations.cc  checker2d_pattern_operations.hh  checker3d_pattern.cc  checker3d_pattern.hh  checker3d_pattern_operations.cc  checker3d_pattern_operations.hh  checker_pattern.cc  checker_pattern.hh  checker_pattern_operations.cc  checker_pattern_operations.hh  cli.hh  color.cc  color.hh  color_test.cc  cone.cc  cone.hh  cone_operations.cc  cone_operations.hh  cone_test.cc  cube.cc  cube.hh  cube_operations.cc  cube_operations.hh  cube_test.cc  (+131 more)
cmake/: FindSDL2.cmake  install_deps.cmake  util.cmake
